--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    django_app Home
+    django_app Blog
 {% endblock %}
 
 {% block content %}
-    <h1>Home</h1>
+    <h1>Blog</h1>
 {% endblock %}
