--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,18 @@
+{% load static %}
 <header>
+    <img src="{% static 'assets/logo.png' %}" alt="Logo precisionDev">
     <nav>
-        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'blog' %}">Blog</a>
+        <a href="http://127.0.0.1:8000/admin">Admin</a>
     </nav>
+    <div>
+        {% if user.is_authenticated %}
+            <p>Coucou {{ user.username }}</p>
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'signup' %}">Signup</a>
+        {% endif %}
+    </div>
 </header>
