--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -9,7 +9,7 @@
     <section class="post-detail">
         <div>
             <h2>{{ post_detail.title }}</h2>
-            <h4>{{ post_detail.categorie }}</h4>
+            <p>- {{ post_detail.categorie }} -</p>
         </div>
         <img src="{{ post_detail.image.url }}" alt="logo {{ post_detail.title }}">
         <p>{{ post_detail.content }}</p>
@@ -20,5 +20,6 @@
             <p>{{ comment.content }}</p>
             <p>- Publié le {{ comment.date }} -</p>
         {% endfor %}
+        <a href="{% url 'createComment' %}">Créer un commentaire</a>
     </section>
 {% endblock %}
