--- a/templates/header.html
+++ b/templates/header.html
@@ -4,12 +4,12 @@
     <nav>
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'blog' %}">Blog</a>
-        <a href="http://127.0.0.1:8000/admin">Admin</a>
     </nav>
-    <div>
+    <div class="user">
         {% if user.is_authenticated %}
             <p>Coucou {{ user.username }}</p>
             <a href="{% url 'logout' %}">Logout</a>
+            <a href="http://127.0.0.1:8000/admin">Admin</a>
         {% else %}
             <a href="{% url 'login' %}">Login</a>
             <a href="{% url 'signup' %}">Signup</a>
